--- a/vote.html
+++ b/vote.html
@@ -20,7 +20,7 @@
 </form>
 
 <hr>
-<p><small>Thank you for voting!</small></p>
+<p><small>Thank you for voting! ..your turn is over</small></p>
 
 </body>
 </html>
